Bug 1930015 - OS list is overlapped by buttons in template wizard
Bug-Url: https://bugzilla.redhat.com/show_bug.cgi?id=1930015

--- a/frontend/packages/kubevirt-plugin/src/components/create-vm-wizard/create-vm-wizard-footer.scss
+++ b/frontend/packages/kubevirt-plugin/src/components/create-vm-wizard/create-vm-wizard-footer.scss
@@ -2,3 +2,9 @@
   width: 100%;
   margin-bottom: var(--pf-global--spacer--md);
 }
+
+.kv-create-vm-modal__footer {
+  // --pf-global--ZIndex--xs == 100
+  z-index: calc(var(--pf-global--ZIndex--xs) - 4); 
+  display: block;
+}
